# xnec2c

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  INSTALL  INSTALL.OPENBSD  MAINTAINER  Makefile.am  NEWS  PACKAGING  README.md  aclocal.m4  appimage-builder.yml  autogen.sh  configure.ac  configure.in  update-example-data.sh  xnec2c.desktop  xnec2c.glade  xnec2c.gladep  xnec2c.spec  xnec2c.spec.in
.github/workflows/: build-appimage.yml  build-deb-packages.yml  build-rpm-packages.yml  ci-build.yml
.xnec2c/: xnec2c.glade
debian/upstream/: metadata
doc/: NEC2-bug.txt  NearFieldCalcs.txt  README.md  TRANSLATING.md  mobile-menu.js  mobile-styles.css  nec2c.txt  nec2dx.f  nec2prt3.txt  xnec2c.1  xnec2c.1.in  xnec2c.html
doc/images/: web-heading.xcf
examples/: 10-20m-moxon.nec  10-20m_horizomni.nec  10-20m_logper.nec  10-30m-box.nec  10-30m_MultiBand_Vertical.nec  10-30m_Vertical.nec  10-30m_bipyramid.nec  10-30m_inv_cone.nec  10-30m_sphere.nec  10-30m_vert.nec  10-40m_windom.nec  10-80m_Classic_Windom-optimized.nec  10-80m_G5RV.nec  10-80m_Inverted-L.nec  10-80m_windom.nec  137MHz_broadside_Yagi.nec  137MHz_turnstile-sloped.nec  137MHz_turnstile.nec  137MHz_turnstile_sloped.nec  137Mhz-QFHA1.nec  137Mhz-QFHA2.nec  137Mhz-QFHA3.nec  137Mhz_xpol_omni.nec  13cm_Yagi.nec  13cm_corner_reflector.nec  13cm_helix+screen.nec  15m_delta-loop.nec  1:4l-gp_on_pole.nec  1MHz_3x_helicone.nec  1MHz_3x_helisphere.nec  1MHz_4x_helisphere.nec  1MHz_helivert.nec  1MHz_tower.nec  20-40m_ground_plane.nec  20-40m_vert_circ_cliff.nec  20-40m_vert_linear_cliff.nec  20-40m_vert_sommerfeld_cliff.nec  20m_car_ant.nec  20m_quad.nec  23cm_helix&screen.nec  (+70 more)
examples/data/: 10-20m-moxon.csv  10-30m-box.csv  10-30m_MultiBand_Vertical.csv  10-30m_bipyramid.csv  10-30m_inv_cone.csv  10-30m_sphere.csv  10-40m_windom.csv  10-80m_Classic_Windom-optimized.csv  10-80m_G5RV.csv  10-80m_Inverted-L.csv  10-80m_windom.csv  137MHz_broadside_Yagi.csv  137MHz_turnstile.csv  137MHz_turnstile_sloped.csv  137Mhz-QFHA1.csv  137Mhz-QFHA2.csv  137Mhz-QFHA3.csv  137Mhz_xpol_omni.csv  13cm_Yagi.csv  13cm_corner_reflector.csv  13cm_helix+screen.csv  15m_delta-loop.csv  1MHz_3x_helicone.csv  1MHz_3x_helisphere.csv  1MHz_4x_helisphere.csv  1MHz_helivert.csv  1MHz_tower.csv  20-40m_ground_plane.csv  20-40m_vert_circ_cliff.csv  20-40m_vert_linear_cliff.csv  20-40m_vert_sommerfeld_cliff.csv  20m_car_ant.csv  20m_quad.csv  23cm_helix+radials.csv  23cm_helix+screen.csv  2m_1to4l-gp_on_pole.csv  2m_1to4l-horiz_gp_on_pole.csv  2m_5to8l-gp_on_pole.csv  2m_EME_ant.csv  2m_Lindenblad.csv  (+37 more)
files/: x-nec2.xml  xnec2c.desktop  xnec2c.glade
m4/: .gitignore
po/: LINGUAS  Makevars  POTFILES.in  af.po  ar.po  bg.po  bn.po  bs.po  cs.po  da.po  de.po  el.po  es.po  et.po  fi.po  fr.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  mk.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po  (+4 more)
resources/: sy_overrides.css  sy_overrides.glade  xnec2c.glade  xnec2c.gresource.xml
resources/gl/: rdpat-fragment.glsl  rdpat-vertex.glsl
scripts/: trans-add-ai-translations.sh  trans-list-untranslated.sh  trans-stats.sh  trans-update.sh  trans-validate-1.sh  trans-validate.sh  update-example-data.sh  xnec2c-lang.sh
src/: Makefile.am  Makefile.in  calculations.c  calculations.h  callback_func.c  callback_func.h  callbacks.c  callbacks.h  cmnd_edit.c  cmnd_edit.h  common.h  console.c  console.h  draw.c  draw.h  draw_radiation.c  draw_radiation.h  draw_structure.c  draw_structure.h  editors.h  expr_edit.c  expr_edit.h  fields.c  fields.h  fork.c  fork.h  geom_edit.c  geom_edit.h  geometry.c  geometry.h  gnuplot.c  gnuplot.h  ground.c  ground.h  i18n.h  input.c  input.h  interface.c  interface.h  main.c  (+42 more)
src/optimizers/: opt_fitness.c  opt_fitness.h  opt_nec2_eval.c  opt_nec2_eval.h  opt_session.c  opt_session.h  opt_simple.c  opt_simple.h  opt_simple_engine.c  opt_simple_internal.h  opt_simple_var.c  optimizer.c  optimizer.h  optimizer_bounds.h  particleswarm.c  particleswarm.h  particleswarm_engine.c  particleswarm_internal.h  simplex.c  simplex.h  simplex_engine.c  simplex_internal.h
t/: Makefile.am
t/fixtures/: README.md  sy_comma_format.nec  sy_math_cmnd.nec  sy_math_geom.nec  sy_separate_cards.nec  test_overrides.sy
t/src/: integration_test_stubs.c  opt_fitness_test.c  opt_simple_test.c  optimizer_test_common.h  optimizer_test_stubs.c  pso_test.c  simplex_test.c  sy_expr_extended_test.c  sy_expr_test.c  sy_fixture_test.c  sy_input_integration_test.c  sy_load_overrides_test.c  sy_value_test.c  test_stubs.c
